<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="adress">2465 Latham St, Mountain View, CA 94043</string>
    <string name="website">www.udacity.com</string>
    <string name="phone">650-555-5555</string>
    <string name="about">Who we are</string>
    <string name="words">Udacity is a for-profit educational organization founded by Sebastian Thrun, David Stavens, and Mike Sokolsky offering massive open online courses (MOOCs).</string>
</resources>
