<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_weight="1"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.dny1.helloanroid.MainActivity"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/uda"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#dd0060"
        android:layout_weight="1"
        android:layout_marginBottom="10sp"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
       android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_group_black_24dp"
            android:layout_marginRight="10sp"/>
        <LinearLayout
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:background="#dd0060"
            android:layout_marginRight="5sp"></LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/atomic_age"
            android:paddingTop="5sp"
            android:text="@string/about"
            android:textColor="@color/textColor"
            android:textSize="@dimen/fab_margin" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70sp"
        android:layout_marginRight="20sp"
        android:layout_weight="1"
        android:fontFamily="@font/abel"
        android:text="@string/words"
        android:textColor="@color/textColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_location_on_black_24dp"
            android:layout_marginRight="10sp"/>
        <LinearLayout
            android:layout_width="5dp"
            android:layout_height="50dp"
            android:background="#dd0060"
            android:layout_marginRight="5sp"></LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/atomic_age"
            android:textColor="@color/textColor"
            android:textSize="@dimen/fab_margin"
            android:text="@string/adress"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_phone_black_24dp"
            android:layout_marginRight="10sp"/>
        <LinearLayout
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:background="#dd0060"
            android:layout_marginRight="5sp"></LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/atomic_age"
            android:textColor="@color/textColor"
            android:textSize="@dimen/fab_margin"
            android:text="@string/phone"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_language_black_24dp"
            android:layout_marginRight="10sp"/>
        <LinearLayout
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:background="#dd0060"
            android:layout_marginRight="5sp"></LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/atomic_age"
            android:textColor="@color/textColor"
            android:textSize="@dimen/fab_margin"
            android:text="@string/website"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#dd0060"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8sp"
            android:fontFamily="@font/aubrey"
            android:text="Designed by todak2000"
            android:textColor="#ffffff" />
    </LinearLayout>
</LinearLayout>
